Fix compile on arm.

BUG: 308357